# py-ast-rule-engine

./: .gitignore  README.md  doc.md  draft.yaml  pyproject.toml
ast_rule_engine/: __main__.py  cli.py  draft.py  parse.py  patch_const.py
samples/: asserts_example0.py  asserts_example1.py
tests/: patch_const.py  test_draft.py  test_parse.py
